adding SNAPSHOT version to project, private ips for data gens, fixed compatiblity problems with Java8